# stary

./: .gitignore  README.md  docker-compose.yml  justfile
caddy/: Caddyfile
galaxy/: go.mod  go.sum  hub.go  main.go  server.go  starnames.txt  world.go
galaxy/api/: config.yaml
galaxy/api/v1/: openapi.yaml
nginx/: nginx.conf
pathfinder/: Cargo.toml  build.rs
pathfinder/src/: main.rs
proto/: point.proto  types.proto
storyteller/: requirements.txt  response_json_template.json  server.py  story_model.py
viz/: client.ts  dev-server.ts  index.html  package-lock.json  package.json  server.ts  tsconfig.json
viz-backend/: Cargo.toml  build.rs
viz-backend/src/: main.rs
viz/genproto/: types.ts
