[package]
name = "viz-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
prost = "0.14.3"
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.49.0", features = ["macros"] }
tower-http = { version = "0.6.8", features = ["cors"] }

[build-dependencies]
prost-build = "0.14.3"
