[package]
name = "viz-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = "0.5.3"
axum = "0.8.8"
axum-extra = { version = "0.12.5", features = ["typed-header"] }
chrono = "0.4.43"
clap = { version = "4.5.60", features = ["derive"] }
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
prost = "0.14.3"
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.49.0", features = ["macros"] }
tower-http = { version = "0.6.8", features = ["cors"] }

[build-dependencies]
prost-build = "0.14.3"
